# ClashBox

./: .gitignore  .gitmodules  README.en.md  README.md  README_en.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  隐私政策.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 功能建议-feature-request.md  问题报告-bug-report.md
.github/workflows/: main.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: layered_image.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/common/: AppTheme.ets  BaseDataSource.ets  ConnectData.ets  Constants.ets  EventHub.ts  HHmmssTimer.ets  (+9 more)
hvigor/: hvigor-config.json5
proxy_core/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
proxy_core/src/flclash/: bridge.c  build.ps1  build.sh  common.go  go.mod  go.sum  hub.go  ipc.go  lib.go  lib_linux.go  libflclash.h  log.go  main_cgo.go  message_cgo.go
proxy_core/src/flclash/platform/: limit.go
proxy_core/src/flclash/state/: state.go
proxy_core/src/flclash/tun/: tun.go
proxy_core/src/main/: module.json5
proxy_core/src/main/cpp/: CMakeLists.txt  bridge.h  napi_init.cpp
proxy_core/src/main/cpp/types/libclashmeta/: Index.d.ts  oh-package.json5
proxy_core/src/main/cpp/types/libflclash/: Index.d.ts  oh-package.json5
proxy_core/src/main/cpp/types/libproxy_core/: Index.d.ts  oh-package.json5
proxy_core/src/main/ets/: Profile.ets  ProfileRepo.ets  Request.ts  appPath.ets  appPath.ts  fileUtils.ts
proxy_core/src/ohosTest/: module.json5
(+241 files in other folders)
